added docker-compose yaml, updated docker-compose network (postgres)

--- a/database_compose.conf
+++ b/database_compose.conf
@@ -1,7 +1,8 @@
 POSTGRES_USER=test_user
 POSTGRES_PASSWORD=password1
-POSTGRES_HOST=postgres
+#POSTGRES_HOST=postgres
+POSTGRES_HOST=postgres_usermanagement
 POSTGRES_PORT=5432
-POSTGRES_DB=db_userman_example
+POSTGRES_DB=db_usermanagement_example
 POSTGRES_INITIALIZE=True
 FLASK_SECRET_KEY=supersecret313
